<resources>
    <string name="app_name">AwfulAndroid</string>
    <string name="name_prompt">Please enter your name:</string>
    <string name="validate_button">VALIDATE</string>
    <string name="welcome_message">Welcome! Let\'s get started…</string>
    <string name="stuck_button">STUCK?</string>
    <string name="stuck_hint_text">Try entering your name in the format first.last</string>
    <string name="stuck_button_got_it">Got it!</string>
    <string name="title_activity_read_text">ReadTextActivity</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="section_format">Section Format?</string>
    <string name="username_text_view">Username</string>
    <string name="username_email_text_view">username@mymail.com</string>
    <string name="close_instructions_button">Close Tutorial</string>
    <string name="bug_found_text">You found a bug!</string>
    <string name="lorem_ipsum_text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas.</string>
    <string name="lorem_ipsum_text_2">Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.</string>
    <string name="lorem_ipsum_text_3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</string>
    <string name="lorem_ipsum_text_4">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</string>
    <string name="lorem_ipsum_text_5">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_weather">Get Weather</string>
</resources>
